<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:columnCount="5"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            app:layout_column="0"
            app:layout_row="1" />

        <ToggleButton
            android:id="@+id/tbTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/tbTempOn"
            android:textOff="@string/tbTempOff"
            />

        <CheckBox
            app:layout_column="0"
            app:layout_row="2"
            android:id="@+id/cbMilk"
            android:text="@string/Milk"
            />
        <CheckBox
            app:layout_column="0"
            app:layout_row="3"
            android:id="@+id/cbSugar"
            android:text="@string/Sugar"
            />
        <CheckBox
            app:layout_column="0"
            app:layout_row="4"
            android:id="@+id/cbLemon"
            android:text="@string/Lemon"
            />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>